--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "author": "Pat Sier",
   "license": "MIT",
-  "description": "Site for chicago-elections-archive",
+  "description": "Maps and data for Chicago elections",
   "scripts": {
     "format": "prettier --write **/*.{js,css} !dist",
     "start": "NODE_ENV=development run-p -l start:*",
@@ -22,46 +22,51 @@
     "analyze": "source-map-explorer dist/**/*.js dist/**/*.js.map"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^0.11.0",
-    "@11ty/eleventy-img": "^0.8.0",
-    "@babel/core": "^7.13.10",
-    "@babel/preset-env": "^7.13.10",
-    "@quasibit/eleventy-plugin-sitemap": "^2.0.4",
-    "@rollup/plugin-commonjs": "^17.1.0",
-    "@rollup/plugin-node-resolve": "^11.2.0",
-    "autoprefixer": "^10.2.5",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
-    "core-js": "^3.9.1",
-    "cssnano": "^4.1.10",
-    "dotenv": "^8.2.0",
-    "eslint": "^7.21.0",
-    "eslint-plugin-import": "^2.22.0",
+    "@11ty/eleventy": "^1.0.0",
+    "@11ty/eleventy-fetch": "^3.0.0",
+    "@11ty/eleventy-img": "^2.0.0",
+    "@babel/core": "^7.17.8",
+    "@babel/eslint-parser": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
+    "@quasibit/eleventy-plugin-sitemap": "^2.1.5",
+    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-commonjs": "^21.0.3",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "autoprefixer": "^10.4.4",
+    "babel-loader": "^8.2.4",
+    "babel-preset-solid": "^1.3.13",
+    "core-js": "^3.21.1",
+    "cssnano": "^5.1.7",
+    "dotenv": "^16.0.0",
+    "eslint": "^8.12.0",
+    "eslint-plugin-import": "^2.25.4",
     "esm": "^3.2.25",
     "file-loader": "^6.0.0",
     "html-minifier": "^4.0.0",
-    "html-webpack-plugin": "^5.3.1",
-    "markdown-it": "^12.0.4",
-    "markdown-it-link-attributes": "^3.0.0",
+    "html-webpack-plugin": "^5.5.0",
+    "markdown-it": "^12.3.2",
+    "markdown-it-link-attributes": "^4.0.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.2.7",
-    "postcss-cli": "^8.3.1",
-    "postcss-import": "^14.0.0",
-    "prettier": "^2.0.5",
-    "prettier-eslint": "^12.0.0",
-    "rollup": "^2.41.0",
+    "postcss": "^8.4.12",
+    "postcss-cli": "^9.1.0",
+    "postcss-import": "^14.1.0",
+    "prettier": "^2.6.1",
+    "prettier-eslint": "^13.0.0",
+    "rollup": "^2.70.0",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-terser": "^7.0.0",
     "source-map-explorer": "^2.5.2",
     "tailwindcss": "^1.9.6",
-    "terser-webpack-plugin": "^5.1.1",
-    "webpack": "^5.24.4",
-    "webpack-cli": "^4.5.0"
+    "terser-webpack-plugin": "^5.3.1",
+    "webpack": "^5.71.0",
+    "webpack-cli": "^4.9.2"
   },
   "dependencies": {
     "classlist-polyfill": "^1.2.0",
-    "formdata-polyfill": "^3.0.20",
-    "mapbox-gl": "^1.13.2",
+    "d3-dsv": "^2.0.0",
+    "date-input-polyfill": "^2.14.0",
+    "formdata-polyfill": "^4.0.10",
+    "maplibre-gl": "^2.1.7",
     "url-search-params-polyfill": "^8.1.0",
     "whatwg-fetch": "^3.6.2"
   },
@@ -78,10 +83,16 @@
     "plugins": [
       "import"
     ],
-    "parser": "babel-eslint",
+    "parser": "@babel/eslint-parser",
     "parserOptions": {
       "ecmaVersion": 2018,
-      "sourceType": "module"
+      "sourceType": "module",
+      "requireConfigFile": false,
+      "babelOptions": {
+        "presets": [
+          "@babel/preset-env"
+        ]
+      }
     }
   },
   "prettier": {
