--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "date-input-polyfill": "^2.14.0",
     "formdata-polyfill": "^4.0.10",
     "maplibre-gl": "^2.1.7",
+    "pym.js": "^1.3.2",
     "solid-js": "^1.4.1",
     "url-search-params-polyfill": "^8.1.0",
     "whatwg-fetch": "^3.6.2"
