--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.9"
 beautifulsoup4 = "^4.11.1"
 requests = "^2.28.0"
 csvkit = "^1.0.7"
+esridump = "^1.11.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.3.0"
