--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "format": "prettier --write **/*.{js,css} !dist",
     "start": "NODE_ENV=development run-p -l start:*",
     "start:eleventy": "eleventy --serve",
-    "start:rollup": "rollup --config rollup.config.js -w",
+    "start:rollup": "rollup --config rollup.config.mjs -w",
     "start:postcss": "postcss ./src/css -d ./site/_includes -w",
     "build": "NODE_ENV=production run-s -l build:*",
     "build:clean": "rm -rf dist",
-    "build:rollup": "rollup --config rollup.config.js",
+    "build:rollup": "rollup --config rollup.config.mjs",
     "build:postcss": "postcss ./src/css -d ./site/_includes",
-    "build:webpack": "webpack --config webpack.config.js",
+    "build:webpack": "webpack --config webpack.config.mjs",
     "build:eleventy": "eleventy",
     "deploy": "echo 'NOT IMPLEMENTED'",
     "lint": "eslint ./src/js/**/*.js",
@@ -30,17 +30,18 @@
     "@babel/preset-env": "^7.20.2",
     "@quasibit/eleventy-plugin-sitemap": "^2.1.5",
     "@rollup/plugin-babel": "^6.0.3",
-    "@rollup/plugin-commonjs": "^22.0.2",
+    "@rollup/plugin-commonjs": "^23.0.3",
     "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-terser": "^0.2.0",
     "autoprefixer": "^10.4.13",
-    "babel-loader": "^8.2.4",
+    "babel-loader": "^9.1.0",
     "babel-preset-solid": "^1.6.3",
     "core-js": "^3.26.1",
     "cssnano": "^5.1.12",
     "dotenv": "^16.0.3",
     "eslint": "^8.18.0",
     "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-solid": "^0.7.0",
+    "eslint-plugin-solid": "^0.9.1",
     "esm": "^3.2.25",
     "file-loader": "^6.0.0",
     "html-minifier": "^4.0.0",
@@ -49,19 +50,18 @@
     "markdown-it-link-attributes": "^4.0.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.12",
-    "postcss-cli": "^9.1.0",
-    "postcss-import": "^14.1.0",
+    "postcss-cli": "^10.1.0",
+    "postcss-import": "^15.0.1",
     "prettier": "^2.7.1",
     "prettier-eslint": "^15.0.1",
-    "rollup": "^2.79.0",
+    "rollup": "^3.6.0",
     "rollup-plugin-copy": "^3.4.0",
-    "rollup-plugin-external-globals": "^0.6.1",
-    "rollup-plugin-terser": "^7.0.0",
+    "rollup-plugin-external-globals": "^0.7.1",
     "source-map-explorer": "^2.5.2",
     "tailwindcss": "^1.9.6",
     "terser-webpack-plugin": "^5.3.1",
     "webpack": "^5.72.1",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^5.0.1"
   },
   "dependencies": {
     "classlist-polyfill": "^1.2.0",
