fix: builds, cleanup version

--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "start:postcss": "postcss ./src/css -d ./site/_includes -w",
     "build": "NODE_ENV=production run-s -l build:*",
     "build:clean": "rm -rf dist",
-    "build:rollup": "rollup --config rollup.config.mjs",
+    "build:rollup": "rollup --config rollup.config.mjs --bundleConfigAsCjs",
     "build:postcss": "postcss ./src/css -d ./site/_includes",
-    "build:webpack": "webpack --config webpack.config.mjs",
+    "build:webpack": "webpack --config webpack.config.js",
     "build:eleventy": "eleventy",
     "deploy": "echo 'NOT IMPLEMENTED'",
     "lint": "eslint ./src/js/**/*.js",
