--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
 
       - uses: actions/setup-node@v1
         with:
-          node-version: "14.x"
+          node-version: "17.x"
 
       - uses: actions/cache@v1
         with:
@@ -30,3 +30,5 @@ jobs:
       - run: npm run lint
 
       - run: npm run style
+
+      - run: npm run build
